--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@steeze-ui/lucide-icons": "^1.0.0",
 		"@steeze-ui/svelte-icon": "^1.3.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
