--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,12 @@
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{ "files": "*.svelte", "options": { "parser": "svelte" } },
+		{ "files": "*.md", "options": { "parser": "markdown-nocjsp" } }
+	],
+	"svelteStrictMode": false,
+	"svelteIndentScriptAndStyle": false,
+	"svelteSortOrder": "options-scripts-markup-styles",
+	"svelteAllowShorthand": true
 }
