--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"gray-matter": "^4.0.3",
 		"pnpm": "^8.6.1",
 		"prettier": "^2.8.0",
+		"prettier-plugin-md-nocjsp": "^1.5.1",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prism-themes": "^1.9.0",
 		"rollup": "^3.23.1",
