--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,17 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [
-		{ "files": "*.svelte", "options": { "parser": "svelte" } },
-		{ "files": "*.md", "options": { "parser": "markdown-nocjsp" } }
-	],
-	"svelteStrictMode": false,
-	"svelteIndentScriptAndStyle": false,
-	"svelteSortOrder": "options-scripts-markup-styles",
-	"svelteAllowShorthand": true
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "arrowParens": "avoid",
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": ["."],
+  "overrides": [
+    { "files": "*.svelte", "options": { "parser": "svelte" } },
+    { "files": "*.md", "options": { "parser": "markdown-nocjsp" } }
+  ],
+  "svelteStrictMode": false,
+  "svelteIndentScriptAndStyle": false,
+  "svelteSortOrder": "options-scripts-markup-styles",
+  "svelteAllowShorthand": true
 }
