--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "type": "module",
   "dependencies": {
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "ts-async-pipe": "^1.1.0"
   }
 }
