--- a/package.json
+++ b/package.json
@@ -2,41 +2,19 @@
   "name": "ocom",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.6.1",
+  "type": "module",
   "scripts": {
-    "dev": "wireit",
     "build": "wireit",
-    "preview": "wireit",
     "check": "wireit",
     "check:watch": "wireit",
+    "dev": "wireit",
+    "format": "wireit",
     "lint": "wireit",
-    "format": "wireit"
+    "preview": "wireit"
   },
-  "wireit": {
-    "dev": {
-      "command": "vite dev"
-    },
-    "build": {
-      "command": "vite build"
-    },
-    "preview": {
-      "command": "vite preview"
-    },
-    "check": {
-      "command": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
-    },
-    "check:watch": {
-      "command": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-    },
-    "lint": {
-      "command": "prettier --plugin-search-dir . --check . && eslint . --fix",
-      "dependencies": [
-        "format"
-      ]
-    },
-    "format": {
-      "command": "prettier --plugin-search-dir . --write ."
-    }
+  "dependencies": {
+    "prismjs": "^1.29.0",
+    "ts-async-pipe": "^1.1.0"
   },
   "devDependencies": {
     "@fontsource/noto-sans": "^5.0.2",
@@ -56,6 +34,11 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-define-config": "^1.20.0",
+    "eslint-formatter-mo": "^1.2.0",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-misc": "^1.11.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-svelte": "^2.26.0",
     "gray-matter": "^4.0.3",
@@ -75,9 +58,31 @@
     "vite": "^4.3.9",
     "wireit": "^0.9.5"
   },
-  "type": "module",
-  "dependencies": {
-    "prismjs": "^1.29.0",
-    "ts-async-pipe": "^1.1.0"
+  "packageManager": "pnpm@8.6.1",
+  "wireit": {
+    "dev": {
+      "command": "vite dev"
+    },
+    "build": {
+      "command": "vite build"
+    },
+    "preview": {
+      "command": "vite preview"
+    },
+    "check": {
+      "command": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
+    },
+    "check:watch": {
+      "command": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "lint": {
+      "command": "prettier --plugin-search-dir . --check . && eslint . --fix -f mo",
+      "dependencies": [
+        "format"
+      ]
+    },
+    "format": {
+      "command": "prettier --plugin-search-dir . --write ."
+    }
   }
 }
