--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-misc": "^1.11.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-svelte": "^2.26.0",
+    "eslint-plugin-tailwindcss": "^3.12.1",
     "gray-matter": "^4.0.3",
     "pnpm": "^8.6.1",
     "prettier": "^2.8.0",
