--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-svelte": "^2.26.0",
     "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-unicorn": "^47.0.0",
     "gray-matter": "^4.0.3",
     "pnpm": "^8.6.1",
     "prettier": "^2.8.0",
